<resources>
    <string name="app_name">Currency Calculation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_currency_course">Valyuta kurslari</string>
    <string name="str_conversion">Konvertatsiya</string>
    <string name="str_descreptoin">Jonli tariflarni tekshiring, miqdorni kiriting va konvertatsiya natijasiga ega bo`ling.</string>
    <string name="str_amount">Miqdori</string>
    <string name="str_result_amount">Konvertatsiya qilingan miqdor</string>
    <string name="str_0_00">0.00</string>
    <string name="str_currency_canculos">Indikativ valyuta kursi</string>
</resources>