<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F6F6F6">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_conversion"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black_33"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"/>

    <TextView
        android:id="@+id/tv_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_descreptoin"
        android:layout_below="@id/tv_title"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp"
        android:textColor="@color/black_10"
        android:gravity="center"
        android:layout_marginTop="11dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="268dp"
        android:layout_below="@id/tv_des"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        app:strokeWidth="0dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="20dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="44dp"
                android:layout_height="44dp"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="22dp"
                android:layout_centerInParent="true"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp">
                <TextView
                    android:id="@+id/tv_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_amount"
                    android:textSize="15sp"
                    android:textColor="@color/black_10"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:cardCornerRadius="24dp"
                    android:layout_below="@id/tv_amount"
                    android:layout_marginTop="14dp"
                    app:cardElevation="0dp">
                    <ImageView
                        android:id="@+id/iv_flag"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:src="@drawable/im_test_flag"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/tv_ccy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="USD"
                    android:textSize="20sp"
                    android:textColor="@color/card_color"
                    android:textStyle="bold"
                    android:layout_marginStart="58dp"
                    android:layout_centerVertical="true"
                    android:layout_below="@id/tv_amount"
                    android:layout_marginTop="20dp"/>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="141dp"
                    android:layout_height="45dp"
                    app:cardBackgroundColor="@color/gray"
                    app:strokeWidth="0dp"
                    app:cardCornerRadius="7dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true">
                    <EditText
                        android:id="@+id/et_amount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="end|center_vertical"
                        android:layout_marginEnd="14dp"
                        android:textSize="20sp"
                        android:textColor="@color/black_33"
                        android:textStyle="bold"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.card.MaterialCardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginTop="37dp"
                android:layout_marginHorizontal="20dp"
                android:layout_below="@id/ll">
                <TextView
                    android:id="@+id/tv_result_amount_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_result_amount"
                    android:textSize="15sp"
                    android:textColor="@color/black_10"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:cardCornerRadius="24dp"
                    android:layout_below="@id/tv_result_amount_title"
                    android:layout_marginTop="14dp"
                    app:cardElevation="0dp">
                    <ImageView
                        android:id="@+id/iv_select_flag"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:src="@drawable/im_test_flag"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/tv_select_ccy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="USD"
                    android:textSize="20sp"
                    android:textColor="@color/card_color"
                    android:textStyle="bold"
                    android:layout_marginStart="58dp"
                    android:layout_centerVertical="true"
                    android:layout_below="@id/tv_result_amount_title"
                    android:layout_marginTop="20dp"/>

                <ImageView
                    android:id="@+id/btn_show_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_down"
                    android:layout_marginTop="47dp"
                    android:layout_marginStart="106dp"/>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="141dp"
                    android:layout_height="45dp"
                    app:cardBackgroundColor="@color/gray"
                    app:strokeWidth="0dp"
                    app:cardCornerRadius="7dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true">
                    <TextView
                        android:id="@+id/tv_result_amount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/str_0_00"
                        android:gravity="end|center_vertical"
                        android:textColor="@color/black_33"
                        android:layout_marginEnd="14dp"
                        android:textSize="20sp"/>
                </com.google.android.material.card.MaterialCardView>
            </RelativeLayout>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_currency_canculos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_currency_canculos"
        android:textSize="16sp"
        android:textColor="@color/black_10"
        android:layout_below="@id/card_view"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/tv_canculos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1 SGD = 0.7367 USD"
        android:textSize="18sp"
        android:textColor="@color/black_33"
        android:textStyle="bold"
        android:layout_below="@id/tv_currency_canculos"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"/>

</RelativeLayout>